# goit-pythonweb-hw-01

./: .gitignore  README.md  README.md~  pyproject.toml  task_01.py  task_02.py
