[project]
name = "goit-pythonweb-hw-01"
version = "0.1.0"
description = "HW_1"
authors = [
    {name = "Oksana Donchuk",email = "80112131+OksanaDonchuk@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
