[project]
name = "goit-pythonweb-hw-01"
version = "0.1.0"
description = "HW_1"
authors = [
    {name = "Oksana Donchuk",email = "80112131+OksanaDonchuk@users.noreply.github.com"}
]
readme = "README.md"
python = ">=3.12,<4.0"
dependencies = [
    "loguru (>=0.7.3,<0.8.0) ; python_version >= \"3.12\" and python_version < \"4.0\""
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
